--- a/src/styles/layouts/_product.scss
+++ b/src/styles/layouts/_product.scss
@@ -8,14 +8,9 @@
     display: flex;
     flex-wrap: nowrap;
     gap: $gap-base;
-    overflow-x: auto;
     max-width: 100vw;
     padding: $space-0;
     overflow-x: auto;
-
-    @include tablet {
-      overflow-x: unset;
-    }
 
     @include desktop {
       gap: $gap-xl;
@@ -23,7 +18,6 @@
   }
 
   &__list-item {
-    height: 272px;
     width: 100%;
     min-width: 224px;
 
